--- a/index.html
+++ b/index.html
@@ -14,106 +14,32 @@
         <button class="dark">Dark</button>
       </div>
     </div>
-    <!-- TradingView Light Widget BEGIN -->
-    <div class="tradingview-widget-container" id="light">
+    <!-- TradingView Widget BEGIN -->
+    <div class="tradingview-widget-container">
       <div class="tradingview-widget-container__widget"></div>
-      <div class="tradingview-widget-copyright">
-        <a href="https://www.tradingview.com" rel="noopener" target="_blank"
-          ><span class="blue-text">Ticker Tape</span></a
-        >
-        by TradingView
-      </div>
-      <script
-        type="text/javascript"
-        src="https://s3.tradingview.com/external-embedding/embed-widget-ticker-tape.js"
-        async
-      >
+      <div class="tradingview-widget-copyright"><a href="https://www.tradingview.com/" rel="noopener nofollow" target="_blank"><span class="blue-text">Track all markets on TradingView</span></a></div>
+      <script type="text/javascript" src="https://s3.tradingview.com/external-embedding/embed-widget-forex-cross-rates.js" async>
         {
-          "symbols": [
-            {
-              "proName": "FOREXCOM:SPXUSD",
-              "title": "S&P 500"
-            },
-            {
-              "proName": "FOREXCOM:NSXUSD",
-              "title": "Nasdaq 100"
-            },
-            {
-              "proName": "TSX:TSX",
-              "title": "S&P/TSX Composite"
-            },
-            {
-              "description": "BTC",
-              "proName": "CAPITALCOM:BTCCAD"
-            },
-            {
-              "description": "ETH",
-              "proName": "CAPITALCOM:ETHCAD"
-            },
-            {
-              "description": "USD/CAD",
-              "proName": "FX:USDCAD"
-            }
-          ],
-          "showSymbolLogo": true,
-          "colorTheme": "light",
-          "isTransparent": true,
-          "displayMode": "regular",
-          "locale": "en"
-        }
-      </script>
-    </div>
-    <!-- TradingView Widget END -->
-    <!-- TradingView Dark Widget BEGIN -->
-    <div class="tradingview-widget-container" id="dark">
-      <div class="tradingview-widget-container__widget"></div>
-      <div class="tradingview-widget-copyright">
-        <a href="https://www.tradingview.com" rel="noopener" target="_blank"
-          ><span class="blue-text">Ticker Tape</span></a
-        >
-        by TradingView
+        "width": "100%",
+        "height": "100%",
+        "currencies": [
+          "EUR",
+          "USD",
+          "JPY",
+          "GBP",
+          "CHF",
+          "AUD",
+          "CAD",
+          "NZD"
+        ],
+        "isTransparent": false,
+        "colorTheme": "dark",
+        "locale": "en",
+        "backgroundColor": "#000000"
+      }
+        </script>
       </div>
-      <script
-        type="text/javascript"
-        src="https://s3.tradingview.com/external-embedding/embed-widget-ticker-tape.js"
-        async
-      >
-        {
-          "symbols": [
-            {
-              "proName": "FOREXCOM:SPXUSD",
-              "title": "S&P 500"
-            },
-            {
-              "proName": "FOREXCOM:NSXUSD",
-              "title": "Nasdaq 100"
-            },
-            {
-              "proName": "TSX:TSX",
-              "title": "S&P/TSX Composite"
-            },
-            {
-              "description": "BTC",
-              "proName": "CAPITALCOM:BTCCAD"
-            },
-            {
-              "description": "ETH",
-              "proName": "CAPITALCOM:ETHCAD"
-            },
-            {
-              "description": "USD/CAD",
-              "proName": "FX:USDCAD"
-            }
-          ],
-          "showSymbolLogo": true,
-          "colorTheme": "dark",
-          "isTransparent": true,
-          "displayMode": "regular",
-          "locale": "en"
-        }
-      </script>
-    </div>
-    <!-- TradingView Widget END -->
+      <!-- TradingView Widget END -->
     <script src="app.js"></script>
   </body>
 </html>
